--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.24.6
 idna==3.7
+inquirerpy==0.3.4
 Jinja2==3.1.4
 jiter==0.5.0
 MarkupSafe==2.1.5
@@ -25,8 +26,11 @@ multidict==6.0.5
 multiprocess==0.70.16
 networkx==3.3
 numpy==2.1.0
+openai==1.41.1
 packaging==24.1
 pandas==2.2.2
+pfzy==0.3.4
+prompt_toolkit==3.0.47
 pyarrow==17.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -36,6 +40,7 @@ PyYAML==6.0.2
 regex==2024.7.24
 requests==2.32.3
 safetensors==0.4.4
+sentencepiece==0.2.0
 setuptools==73.0.1
 six==1.16.0
 sniffio==1.3.1
@@ -47,5 +52,6 @@ transformers==4.44.1
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+wcwidth==0.2.13
 xxhash==3.5.0
 yarl==1.9.4
