--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.33.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
@@ -25,12 +26,13 @@ mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
 networkx==3.3
-numpy==2.1.0
+numpy==1.26.4
 openai==1.41.1
 packaging==24.1
 pandas==2.2.2
 pfzy==0.3.4
 prompt_toolkit==3.0.47
+psutil==6.0.0
 pyarrow==17.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
