--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ distlib==0.3.4
 distro==1.9.0
 distro-info==1.1+ubuntu0.1
 docker==5.0.3
+docstring_parser==0.16
 entrypoints==0.4
 et-xmlfile==1.0.1
 exceptiongroup==1.2.0
@@ -133,10 +134,12 @@ llvmlite==0.41.1
 lxml==4.8.0
 lz4==3.1.3+dfsg
 Markdown==3.3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
+mdurl==0.1.2
 mistune==3.0.2
 ml-dtypes==0.2.0
 more-itertools==8.10.0
@@ -207,7 +210,7 @@ pycryptodomex==3.11.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 pyflakes==2.4.0
-Pygments==2.11.2
+Pygments==2.18.0
 PyGObject==3.42.1
 PyHamcrest==2.0.2
 pyinotify==0.9.6
@@ -236,6 +239,7 @@ requests==2.32.3
 requests-oauthlib==1.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.13.2
 rsa==4.8
 safetensors==0.4.4
@@ -246,6 +250,7 @@ SecretStorage==3.3.1
 Send2Trash==1.8.2
 sentencepiece==0.2.0
 service-identity==18.1.0
+shtab==1.7.1
 simplejson==3.17.6
 six==1.16.0
 sniffio==1.3.1
@@ -276,10 +281,12 @@ tqdm==4.66.5
 traitlets==5.14.0
 transformers==4.44.1
 triton==3.0.0
+trl==0.9.6
 Twisted==22.1.0
 typeguard==4.1.5
 types-python-dateutil==2.8.19.14
 typing_extensions==4.12.2
+tyro==0.8.8
 tzdata==2024.1
 ubuntu-advantage-tools==8001
 ufoLib2==0.13.1
